# web-portal

./: .editorconfig  .gitignore  .prettierignore  .pylintrc  README.md  app.py  build.sh  manage.py  package.json  prettier.config.cjs  pyproject.toml  requirements.txt  vercel.json
apps/css/: package.json  tailwind.config.js
apps/templates/: base.html
apps/templates/accounts/: sign-in.html  sign-up.html
apps/templates/accounts/password-reset/: password-reset-complete.html  password-reset-confirm.html  password-reset-done.html  password-reset.html
apps/templates/accounts/password-reset/email/: password-reset-email.html
apps/templates/blog/: create.html  detail.html  home.html  newsletter.html  suggested-posts.html  update.html
apps/templates/blog/about/: author.html
apps/templates/blog/components/: article.html  slider.html
apps/templates/comments/: comment.html  dropdown.html  form.html  reply.html
apps/templates/components/: footer.html  navbar.html
apps/templates/css/: main.css.html
apps/templates/pages/: home.html
apps/templates/search/: view.html
apps/templates/snippits/: form-errors.html
apps/web/apps/accounts/: models.py
apps/web/apps/blog/: forms.py  models.py  views.py
apps/web/apps/comments/: forms.py  models.py  views.py
apps/web/apps/pages/: views.py
apps/web/apps/search/: forms.py  models.py  utils.py  views.py
apps/web/backend/: postgres_db.py  settings.py  urls.py
fakeData/: lorem.py  main.py
tests/: test_browse.py  test_login.py  test_register.py  test_responsive.py  test_search.py
(+5 files in other folders)
